UBR-297: Make sure the "cancel" links align nicely with the form submit buttons in modals.

--- a/app/styles/components/_modal.scss
+++ b/app/styles/components/_modal.scss
@@ -7,7 +7,7 @@
     max-width: 1200px;
   }
   &-footer {
-    a.pull-left {
+    a {
       vertical-align: middle;
     }
   }
